--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-mustache')        // 머스테치 의존성
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')   // 시큐리티 관련 의존성
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
